# TP2

./: TP2.code-workspace
codigo/: .gitignore
codigo/ejercicio1/: CMakeLists.txt  TP2.code-workspace  compilador.txt
codigo/ejercicio1/examples/: main.cpp
codigo/ejercicio1/headers/: Clases.h  Pokedex.h  Pokemon.h  PokemonInfo.h
codigo/ejercicio1/implementaciones/: Clases.cpp
codigo/ejercicio1/include/: Pokedex.cpp  Pokedex.h  Pokemon.cpp  Pokemon.h  PokemonInfo.h  pokedex.h  pokemon.h  pokemonInfo.h
codigo/ejercicio1/sources/: Pokedex.cpp  Pokemon.cpp  PokemonInfo.cpp
codigo/ejercicio1/src/: Pokedex.cpp  Pokemon.cpp  PokemonInfo.cpp
codigo/ejercicio2/: CMakeLists.txt
codigo/ejercicio2/examples/: main.cpp
codigo/ejercicio2/include/: dron.h
codigo/ejercicio2/src/: dron.cpp
codigo/ejercicio3/: CMakeLists.txt
codigo/ejercicio3/src/: tarea.cpp
